Fixed mobile footer link spacing

--- a/assets/scss/mobile.scss
+++ b/assets/scss/mobile.scss
@@ -40,6 +40,10 @@
         width: 9.5rem;
         border-right: none;
         font-size: 1rem;
+
+        p {
+            margin: 0;
+        }
     }
 
     section {
